<resources>
    <string name="app_name">MTS Filmes</string>
    <string name="android">Android</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="todo">TODO</string>
    <string name="preencha_seu_nome">Preencha seu Nome</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="preencha_seu_e_mail">Preencha seu E-mail</string>
    <string name="preencha_a_senha">Preencha a senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">nome</string>
    <string name="email" />
    <string name="Nome">Nome</string>
    <string name="Email">Email</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_cadastrar">Inscrever-se</string>
    <string name="title_activity_filme_cadastro">Gerenciar Filme</string>
    <string name="title_activity_filme_importar">Importar Filmes</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="importar">Importar</string>
    <string name="t_tulo" />
    <string name="salvar">Salvar</string>
    <string name="ano" />
    <string name="nota" />
    <string name="url_imagem" />
    <string name="titulo_hint" />
    <string name="nota_hint" />
    <string name="url_imagem_hint" />
    <string name="titulo_adapter" />
    <string name="textview">TextView</string>
    <string name="nota_Adatpter">10</string>
    <string name="ol">Olá</string>
    <string name="title_activity_filme_visualizar">Visualizar Filme</string>
</resources>
