<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matheusbrito.aula1.FilmeCadastroActivity">

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Titulo"
        android:inputType="textPersonName"
        android:maxLength="300"
        android:text="@string/t_tulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/txtImagem"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Url Imagem"
        android:inputType="textPersonName"
        android:maxLength="300"
        android:text="@string/url_imagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/txtNota"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="155dp"
        android:ems="10"
        android:hint="Nota"
        android:inputType="numberDecimal"
        android:text="@string/nota"
        app:layout_constraintBottom_toTopOf="@+id/listViewGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/txtAno"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:defaultValue="2018"
        android:ems="10"
        android:hint="Ano"
        android:inputType="number"
        android:maxLength="4"
        android:text="@string/ano"
        app:layout_constraintBottom_toTopOf="@+id/listViewGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="Salvar"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />


    <ListView
        android:id="@+id/listViewGenero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="82dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNota"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="218dp" />


</android.support.constraint.ConstraintLayout>
