<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="136dp"
    android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_light_background"
            card_view:cardCornerRadius="4dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <!--<TextView-->
            <!--android:id="@+id/info_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/ol" />-->

            <!--<ImageView-->
            <!--android:id="@+id/imageView3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--app:srcCompat="@mipmap/ic_launcher" />-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="191dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@mipmap/ic_launcher" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="342dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:lineSpacingExtra="8sp"
                        android:selectAllOnFocus="false"
                        android:text="@string/textview"
                        android:textAlignment="gravity"
                        android:textAllCaps="false"
                        android:textColor="@android:color/background_dark"
                        android:textColorLink="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="2018"
                        android:textColor="?android:attr/colorAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtNota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/nota_Adatpter"
                        android:textColor="?android:attr/colorPressedHighlight"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGeneros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:text="TextView"
                        android:textColor="?android:attr/statusBarColor"
                        android:textColorLink="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="normal" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

</LinearLayout>